prototype_madison: fix brand page clipping, center grid

--- a/prototype_madison/modules/gallery/gallery.css
+++ b/prototype_madison/modules/gallery/gallery.css
@@ -1,5 +1,6 @@
 .mod-gallery {
     padding-top: 30px;
+    padding-left: 15px;
 }
 .mod-gallery .mrec,
 .mod-gallery .house-ad {
