--- a/prototype_madison/modules/gallery/grid.css
+++ b/prototype_madison/modules/gallery/grid.css
@@ -13,7 +13,7 @@
     display: inline;
 }
 .row {
-    width: 970px;
+    width: 960px;
     margin: 0 auto;
     overflow: hidden;
 }
